# loom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-docs  README.md  SECURITY.md
.product/: capabilities.yaml  config.toml  how-contract.yaml  role-bindings.yaml
.product/author-domain/loom/: loom.provenance.json  (+2 more)
.product/deciders/: e-binding-contract-decider.yaml  e-bundle-decider.yaml  e-component-instance-decider.yaml  e-ingestion-decider.yaml  e-reification-run-decider.yaml
.product/deliverables/: d1-graph-core.yaml  d2-oracles-ingest.yaml  d3-runtime.yaml  d4-seam.yaml  d5-web-mode-gallery.yaml  d6-native-modes.yaml
.product/deployable-units/: du-gallery-web.yaml  du-loom-android.yaml  du-loom-cli.yaml  du-loom-ios.yaml  du-loom-web.yaml
.product/features/: ft-graph-core.yaml  ft-ingestion-gate.yaml  ft-native-modes.yaml  ft-runtime.yaml  ft-seam.yaml  ft-web-mode-gallery.yaml
.product/projectors/: rm-binding-contract-projector.yaml  rm-blast-radius-projector.yaml  rm-catalog-inventory-projector.yaml  rm-descriptor-projector.yaml  rm-ingestion-report-projector.yaml  rm-reification-report-projector.yaml  rm-run-status-projector.yaml
.product/releases/: rel-0.1.0.yaml
.product/work-units/: handler-e-binding-contract.yaml  handler-e-bundle.yaml  handler-e-component-instance.yaml  handler-e-ingestion.yaml  handler-e-machine.yaml  handler-e-mode-contract.yaml  handler-e-motion-entry.yaml  handler-e-reification-row.yaml  handler-e-reification-run.yaml  handler-e-token-graph.yaml  wu-adapter-fidelity-scan.yaml  wu-gallery.yaml  wu-loom-cli.yaml  wu-loom-ffi.yaml  wu-loom-ontology.yaml  wu-loom-oracles.yaml  wu-loom-wasm.yaml  wu-loom-web-react.yaml  wu-loom-web.yaml  wu-shacl-shapes.yaml  wu-sparql-queries.yaml
crates/loom-cli/: Cargo.toml
crates/loom-cli/src/: main.rs
crates/loom-ffi/: Cargo.toml
crates/loom-ffi/src/: lib.rs
crates/loom-graph/: Cargo.toml
crates/loom-graph/queries/: blast_radius.sparql  bundle_status.sparql  catalog_inventory.sparql  completeness_construct.sparql  machines.sparql  mode_contracts.sparql  motion.sparql  tokens.sparql
crates/loom-graph/shapes/: machines.ttl  mode-contracts.ttl  motion.ttl  reification.ttl  tokens.ttl
crates/loom-graph/src/: bundle.rs  decider.rs  graph.rs  lib.rs  mode_contracts.rs  motion.rs  query.rs  reification_table.rs  shacl.rs  sparql.rs  store.rs  tokens.rs  vectors.rs
crates/loom-graph/src/bundle/: load_gate.rs  provenance.rs  views.rs
crates/loom-graph/tests/: bundles_load.rs  queries_answer.rs  shacl_vectors.rs
crates/loom-graph/tests/common/: mod.rs
crates/loom-graph/tests/fixtures/: broken-motion.jsonld
crates/loom-graph/vectors/: bundle-decider.json  machines.json  motion.json  reification.json  tokens.json
crates/loom-ingest/: Cargo.toml
crates/loom-ingest/schemas/: token-ingestion.schema.json
crates/loom-ingest/src/: gate.rs  lib.rs
crates/loom-machine/: Cargo.toml
crates/loom-ontology/: Cargo.toml
crates/loom-oracles/: Cargo.toml
crates/loom-oracles/src/: lib.rs
crates/loom-reify/: Cargo.toml
crates/loom-reify/src/: lib.rs  run.rs
crates/loom-wasm/: Cargo.toml
crates/loom-wasm/src/: lib.rs
docs/: architecture.md  loom-implementation.md
reference/bindings/: sample.binding-contract.json  sample.composition-graph.json  sample.ui-intent.json
reference/bundles/: command.machine.jsonld  composition-containers.jsonld  mode-contracts.jsonld  motion.jsonld  reification-table.jsonld  single-select.machine.jsonld  token-graph.jsonld
reference/oracles/: binding_check.py  contract_consistency.py
schema/: binding-contract.schema.json  mode-contract.schema.json
(+16 files in other folders)
