[package]
name = "loom-oracles"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Loom §7 oracles: pure Rust judges over queried facts, vector-equivalent to the Python reference."

[dependencies]
loom-graph = { path = "../loom-graph" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
