[package]
name = "loom-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Loom wasm surface: the wasm-bindgen twin of the loom-ffi handle."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loom-ffi = { path = "../loom-ffi" }
loom-machine = { path = "../loom-machine" }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
